--- a/day2.html
+++ b/day2.html
@@ -75,9 +75,10 @@
             color: var(--sub);
         }
 
-        /* Day 2 主題橫幅（綠色竹林風格） */
+        /* Day 2 主題橫幅（真實照片背景：大熊貓竹林 + 綠色漸層覆蓋） */
         .day-banner {
-            background: linear-gradient(135deg, #10B981 0%, #059669 100%);
+            background: linear-gradient(135deg, rgba(16, 185, 129, 0.80) 0%, rgba(5, 150, 105, 0.75) 100%),
+                url('https://images.unsplash.com/photo-1564349683136-77e08dba1ef7?w=900&q=80&auto=format') center center / cover no-repeat;
             padding: 18px 16px;
             display: flex;
             align-items: center;
