--- a/index.html
+++ b/index.html
@@ -59,18 +59,23 @@
       height: 60vw;
       max-height: 320px;
       min-height: 220px;
-      background: linear-gradient(135deg, #0D9488 0%, #1E3A5F 40%, #2D1B69 100%);
+      /* 真實照片背景：成都錦江安順廊橋黃昏 */
+      background: url('https://images.unsplash.com/photo-1600111893479-a4c9e2b3d6d0?w=900&q=80&auto=format') center center / cover no-repeat;
+      /* 萬一照片載入失敗的備用漸層 */
+      background-color: #1E3A5F;
       overflow: hidden;
       border-radius: 0 0 32px 32px;
     }
 
-    /* 插圖背景：用 SVG 繪製大熊貓 + 竹子 + 文化元素 */
+    /* SVG 插圖裝飾層：縮到角落，半透明疊加 */
     .hero-bg-svg {
       position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.35;
+      bottom: -20px;
+      right: -10px;
+      width: 200px;
+      height: 180px;
+      opacity: 0.30;
+      pointer-events: none;
     }
 
     .hero-gradient {
