feat: update to real 9-day-8-night Chengdu itinerary with hotels

--- a/day1.html
+++ b/day1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 1 · 市中心探索｜成都旅遊 2025</title>
+    <title>Day 1 · 抵達成都 · 市區初體驗｜成都旅遊 2025</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
@@ -443,8 +443,8 @@
     <div class="top-bar">
         <a class="back-btn" href="index.html" title="返回主頁">←</a>
         <div>
-            <div class="top-bar-title">Day 1 · 市中心探索</div>
-            <div class="top-bar-sub">3月15日（週六）</div>
+            <div class="top-bar-title">Day 1 · 抵達成都</div>
+            <div class="top-bar-sub">5月16日（週五）</div>
         </div>
     </div>
 
@@ -452,12 +452,12 @@
     <div class="day-banner">
         <div class="day-banner-num">01</div>
         <div class="day-banner-info">
-            <div class="day-theme-title">初抵城市 · 市中心探索 🏙️</div>
-            <div class="day-meta-row">3月15日（週六）· 成都市中心</div>
+            <div class="day-theme-title">抵達成都 · 市區初體驗 🏙️</div>
+            <div class="day-meta-row">5月16日（週五）· 春熙路/太古里</div>
             <div class="day-stats-row">
                 <span class="day-stat">📍 6個景點</span>
-                <span class="day-stat">🚶 ~8km</span>
-                <span class="day-stat">⏱ 約11小時</span>
+                <span class="day-stat">🏨 亞朵酒店</span>
+                <span class="day-stat">⏱ 半日遊</span>
             </div>
         </div>
     </div>
