--- a/day2.html
+++ b/day2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 2 · 大熊貓之旅｜成都旅遊 2025</title>
+    <title>Day 2 · 黃龍溪古鎮一日遊｜成都旅遊 2025</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
@@ -490,8 +490,8 @@
     <div class="top-bar">
         <a class="back-btn" href="index.html">←</a>
         <div>
-            <div class="top-bar-title">Day 2 · 大熊貓之旅</div>
-            <div class="top-bar-sub">3月16日（週日）</div>
+            <div class="top-bar-title">Day 2 · 黃龍溪古鎮</div>
+            <div class="top-bar-sub">5月17日（週六）</div>
         </div>
     </div>
 
@@ -499,12 +499,12 @@
     <div class="day-banner">
         <div class="day-banner-num">02</div>
         <div class="day-banner-info">
-            <div class="day-theme-title">大熊貓 · 文化聖地 🐼</div>
-            <div class="day-meta-row">3月16日（週日）· 成都北區 + 武侯片區</div>
+            <div class="day-theme-title">黃龍溪古鎮一日遊 🏮</div>
+            <div class="day-meta-row">5月17日（週六）· 雙流區黃龍溪</div>
             <div class="day-stats-row">
-                <span class="day-stat">📍 5個景點</span>
-                <span class="day-stat">🚗 ~35km</span>
-                <span class="day-stat">⏱ 約12小時</span>
+                <span class="day-stat">📍 黃龍溪古鎮</span>
+                <span class="day-stat">🚗 ~60km</span>
+                <span class="day-stat">🏨 亞朵酒店</span>
             </div>
         </div>
     </div>
